<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Repeater.MY</string>
    <string name="action_settings">Settings</string>
    <string name="action_heatmap">Heatmap</string>
    <string name="action_callsign_stats">Stats</string>
    <string name="action_about">About</string>
    <string name="action_suggest">Suggest&#8230;</string>
    <string name="action_wrongInfo">Wrong Info?</string>
    <string name="title_activity_repeater_details">Details</string>
    <string name="txtLicense">Copyright © 2018 Mohammad Hafiz Ismail\nEmail: &lt;mypapit@gmail.com&gt;\nWeb: github.com/mypapit/repeater-my\nFacebook: fb.me/repeater-my\n\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\nLicense: http://www.gnu.org/licenses\n\nDISCLAIMER: The latitude/longitude listed is approximate and only used for distance calculation and does not reflect actual repeater location."\n\nThe repeater information have been gathered from public domain sources including (but not limited to) Amateur Radio Club websites, logbooks, publicly-accessible database and individual contributors. Although repeater information is accurate at release time, be advised that details such as trasmitting/receiving frequency, tones and location may change without notice, thus information update through users/contributors are much appreciated. </string>
    <string name="title_activity_contrib">Contributors</string>
    <string name="action_contrib">Contributors</string>
    <string name="action_simplex_title">Simplex&#8230;</string>
    <string name="search_title">Search</string>
    <string name="manual_settings_title">Set Location&#8230;</string>
    <string name="gps_not_found_message">This app works better with GPS or Location Service. Enabling these allow automatic detection of Amateur Radio Repeater near you.\n\nWould you like to enable Location Service now?\n</string>
    <string name="gps_not_found_title">Location Service Not Enabled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_activity_static_location">Select Location (Manual)</string>
    <string name="notice_enable_location">Location Service for enhanced experience</string>
    <string name="label_enable">Enable</string>
    <string name="title_activity_suggest">Suggest Repeater</string>
    <string name="action_suggest_done">Submit</string>
    <string name="title_suggest_instruction">Fill in new repeater details that you want to suggest. Use this only for suggesting new repeater.</string>
    <string name="title_activity_correc">Suggest Correction</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_walkthrough">New in Repeater.MY</string>
    <string name="title_activity_help_overlay">Tips</string>
    <string name="title_activity_simplex">Simplex Freq</string>
    <string name="title_activity_callsign_details">CallsignDetailsActivity</string>
    <string name="title_activity_nearby_operators">Nearby Stations</string>
    <string name="graph_weekday">  weekday activity last 30 days</string>
    <string name="graph_weekly">  weekly activity last 30 days</string>

    <string name="no_heatmap">No Heatmap</string>
    <string name="heatmap_off">Heatmap Off</string>
    <string name="no_map">Unable to Display Map</string>

    <string name="ad_unit_id" translatable="false">ca-app-pub-3163716613766876/9826701476</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank</string>

</resources>